--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.1.7
 django-cors-headers==2.5.2
+django-heroku==0.3.1
 django-random-queryset==0.1.1
 django-rest-framework==0.1.0
 djangorestframework==3.9.2
@@ -28,6 +29,7 @@ oauthlib==3.0.1
 pbr==5.1.3
 promise==2.2.1
 protobuf==3.7.1
+psycopg2==2.8.3
 PyJWT==1.7.1
 PyMySQL==0.9.3
 PySocks==1.7.0
@@ -46,3 +48,4 @@ twilio==6.30.0
 urllib3==1.25.3
 Werkzeug==0.15.1
 wh==1.2.0
+whitenoise==4.1.3
